# serde-reflect

./: Cargo.toml  README.md  reflect.rs
derive/: Cargo.toml
derive/src/: lib.rs
src/: de.rs  lib.rs  metadata.rs  ser.rs
tests/: all_derive_features.rs  common.proptest-regressions  common.rs  dynamic_reflection.rs  static_reflection.rs
