[package]
name = "serde-reflect-derive"
version = "0.1.0"
authors = ["ember arlynx <ember.arlynx@o1labs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "*"
proc-macro2 = "*"
itertools = "0.10"
